assert-struct/tests/snapshots/multiple_failures__option_multiple_failures.snap
---
source: assert-struct/tests/multiple_failures.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/multiple_failures_errors/option_multiple_failures.rs:19:21
   |
19 |         theme: Some("dark"),
   |                     ^^^^^^ got "light"
20 |         font_size: Some(> 12),
   |                         ^^^^ got 10
